--- a/PatientRegistrationApp/PatientRegistrationApp.csproj
+++ b/PatientRegistrationApp/PatientRegistrationApp.csproj
@@ -70,6 +70,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="MailMergeDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MailMergeDialog.Designer.cs">
+      <DependentUpon>MailMergeDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="AddPatientDialog.resx">
@@ -83,6 +89,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MailMergeDialog.resx">
+      <DependentUpon>MailMergeDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
